[tool.poetry]
name = "taxi-fare-website"
version = "1.0.0"
description = ""
authors = ["Adrien Carpentier <moi@adriencarpentier.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^0.82.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
